css/styles.css
body {
	background-color: #f5f5f5;
	font-family: "Lora", serif;
}

button {
	font-family: "Montserrat", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Montserrat", sans-serif;
}

a {
	color: inherit;
	text-decoration: none;
}

footer {
	background-color: #364f6b;
	padding: 32px;
	text-align: center;
	color: #f5f5f5;
}

.navbar-brand {
	font-family: "Damion", cursive;
	font-size: 2rem;
	font-weight: bolder;
	letter-spacing: 0.2rem;
}

.nav-item {
	margin-left: 2.5rem;
}

.nav-link {
	font-family: "Montserrat", sans-serif;
}

.btn {
	background-color: #fc5185;
	color: #f5f5f5;
}

.landing-screen {
	margin-top: 7.5rem;
}

.landing-screen .introduction {
	padding-right: 6.25rem;
}

.landing-screen h1 {
	font-weight: bolder;
	font-size: 3rem;
}

.landing-screen h4 {
	text-decoration: underline;
	padding-bottom: 2.5rem;
}

.landing-screen p {
	font-size: 1.2rem;
}

.developer-pic,
.about-me-pic {
	width: 100%;
	height: auto;
}

.about-me {
	margin-top: 10rem;
	background-color: #3fc1c9;
	padding: 120px 0;
	text-align: center;
}

.about-me h1 {
	line-height: 2;
}

.about-me p {
	font-size: 1.2rem;
	text-align: left;
	color: #364f6b;
}

.about-me span {
	font-weight: bolder;
}

.testing {
	padding-right: 6.25rem;
}

.social-icons {
	margin-top: 2.5rem;
}

.social-icons i {
	margin-right: 1.25rem;
}

.fa-facebook:hover {
	color: #0e8df1;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.fa-github:hover {
	color: black;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.fa-instagram:hover {
	color: transparent;
	background: -webkit-radial-gradient(
		30% 107%,
		circle,
		#fdf497 0%,
		#fdf497 5%,
		#fd5949 45%,
		#d6249f 60%,
		#285aeb 90%
	);
	background: -o-radial-gradient(
		30% 107%,
		circle,
		#fdf497 0%,
		#fdf497 5%,
		#fd5949 45%,
		#d6249f 60%,
		#285aeb 90%
	);
	background: radial-gradient(
		circle at 30% 107%,
		#fdf497 0%,
		#fdf497 5%,
		#fd5949 45%,
		#d6249f 60%,
		#285aeb 90%
	);
	background: -webkit-radial-gradient(
		circle at 30% 107%,
		#fdf497 0%,
		#fdf497 5%,
		#fd5949 45%,
		#d6249f 60%,
		#285aeb 90%
	);
	background-clip: text;
	-webkit-background-clip: text;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.fa-linkedin:hover {
	color: #0a66c2;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.fa-twitter:hover {
	color: #1da1f2;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.fa-stack-overflow:hover {
	color: #f28c3a;
	transform: scale(1.3);
	transition: transform 0.2s ease;
}

.contact-me {
	padding: 80px 0;
}

.contact-me h1 {
	text-align: center;
	margin-bottom: 50px;
}

.contact-me form .row {
	margin-bottom: 1.875rem;
}

.contact-me .btn {
	margin-top: 1.25rem;
}

.contact-me img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
}

.reach-out span {
	display: block;
	font-style: italic;
	font-size: 2.5rem;
	color: #364f6b;
	font-family: "Damion", cursive;
	text-align: center;
}

.reach-padding {
	padding-right: 120px;
}

.hidden {
	opacity: 0;
}

@media (max-width: 768px) {
	.introduction {
		margin-left: 2.5rem; /* 40px */
		margin-bottom: 1.875rem; /* 30px */
    }
    
    .landing-screen img {
        margin: 0 7.5%;
    }

	.introduction h1,
	h4,
	p {
		text-align: center;
    }
    
    .developer-pic {
        width: 85%;
    }

	.about-me {
        margin-top: 5.5rem;
        padding-top: 2.5rem;
        padding-bottom: 2.5rem;
    }

	.testing {
		width: 100%;
        margin-left: 2.5rem;
        margin-bottom: 2.5rem;
	}
}

